--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,24 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
+  min-height: 100vh;
+  width: 100%;
+  position:absolute;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.content{
+  position: relative;
+  background-color: black;
+  filter: drop-shadow(0 0 5px gray);
+  width: 40%;
+  border-radius: 0.5rem;
+  margin: auto;
+  margin-top: 10rem;
+  padding-bottom: 20px;
+  z-index: 1;
 }
 
 @media (prefers-reduced-motion: no-preference) {
